kotlin-parser/src/test/semlang/validatorTests/fail/nameCollision3.sem

struct Bar {
  a: Integer
}

function Bar(): Integer {
  Integer."1"
}
